--- a/index.html
+++ b/index.html
@@ -1,26 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+
 <body>
   <script>
-
-function getData() {
-  return new Promise((resolve, reject) =>{
-    var data = 100;
-    resolve(data);
-  });
-}
-
-// resolve()의 결과 값 data를 resolvedData로 받음
-getData().then(function(resolvedData) {
-  console.log(resolvedData); // 100
-});
-
-
+    var xhr = new XMLHttpRequest();
+    xhr.open('GET', 'https://api.example.com/data', false);
+    xhr.send();
+    console.log(xhr.responseText);
   </script>
 </body>
+
 </html>
