fix error xhr code path

--- a/fetch/xhr.html
+++ b/fetch/xhr.html
@@ -8,7 +8,7 @@
 <body>
   <script>
 var xhr = new XMLHttpRequest();
-xhr.open('GET', 'test.json', true);
+xhr.open('GET', 'fetch.json', true);
 
 xhr.onload = function () {
   if (xhr.status >= 200 && xhr.status < 300) {
