--- a/index.html
+++ b/index.html
@@ -1,18 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+<meta charset="UTF-8">
+<title>Product List</title>
 </head>
 <body>
-  <div id="root">
-    <form action="/mariaDB">
-      <button type="submit">
-        
-      </button>
-    </form>
-  </div>
-  <script></script>
+
+<h1>Product List</h1>
+
+<table border="1">
+  <thead>
+    <tr>
+      <th>Number</th>
+      <th>Name</th>
+      <th>Price</th>
+    </tr>
+  </thead>
+  <tbody id="productList">
+    <!-- Data will be populated here -->
+  </tbody>
+</table>
+
+<script>
+  // Fetching data from the server using AJAX
+  fetch('/mariaDB')
+    .then(response => response.json())
+    .then(data => {
+      const productList = document.getElementById('productList');
+      data.forEach(product => {
+        const row = `
+          <tr>
+            <td>${product.number}</td>
+            <td>${product.name}</td>
+            <td>${product.price}</td>
+          </tr>
+        `;
+        productList.innerHTML += row;
+      });
+    })
+    .catch(error => console.error('Error fetching data:', error));
+</script>
+
 </body>
 </html>
