add comment about xhr code

--- a/db/xhr.html
+++ b/db/xhr.html
@@ -8,10 +8,13 @@
 
 <body>
 
+  <!-- 웹 페이지의 제목 -->
   <h1>Product List with xhr</h1>
 
+  <!-- 상품 목록을 표시할 테이블 생성 -->
   <table border="1">
     <thead>
+      <!-- 테이블 헤더를 정의 -->
       <tr>
         <th>Number</th>
         <th>Name</th>
@@ -19,45 +22,50 @@
       </tr>
     </thead>
     <tbody id="productList">
-      <!-- Data will be populated here -->
+      <!-- 서버에서 받아온 데이터로 채워질 테이블 본문 -->
     </tbody>
   </table>
 
   <script>
-    // Creating XHR object
+    // XMLHttpRequest 객체 생성
     const xhr = new XMLHttpRequest();
 
-    // Setting up the request
+    // GET 방식으로 'http://localhost:3218/mariaDB' URL에 요청 설정
     xhr.open('GET', 'http://localhost:3218/mariaDB', true);
 
-    // Setting the onload callback function
+    // 요청이 완료되었을 때의 콜백 함수 설정
     xhr.onload = function () {
+      // HTTP 상태 코드가 200(성공)일 경우 데이터 처리
       if (this.status === 200) {
+        // 상품 목록 테이블의 tbody 요소 가져오기
         const productList = document.getElementById('productList');
+        // 서버에서 받아온 JSON 형식의 데이터 파싱
         const data = JSON.parse(this.responseText);
 
-        // Looping through the data and populating the table
+        // 데이터를 순회하며 테이블 행으로 추가
         data.forEach(product => {
           const row = `
           <tr>
-            <td>${product.number}</td>
-            <td>${product.name}</td>
-            <td>${product.price}</td>
+            <td>${product.number}</td>  <!-- 상품 번호 -->
+            <td>${product.name}</td>    <!-- 상품 이름 -->
+            <td>${product.price}</td>   <!-- 상품 가격 -->
           </tr>
         `;
-          productList.innerHTML += row;
+          productList.innerHTML += row;  // 테이블에 행 추가
         });
-      } else {
-        console.error('Failed to fetch data');
+      } 
+      // HTTP 상태 코드가 200이 아닌 경우 오류 처리
+      else {
+        console.error('Failed to fetch data');  // 데이터 가져오기 실패
       }
     };
 
-    // Setting the onerror callback function
+    // 요청 중 오류가 발생했을 때의 콜백 함수 설정
     xhr.onerror = function () {
-      console.error('Error occurred while fetching data.');
+      console.error('Error occurred while fetching data.');  // 데이터 가져오기 중 오류 발생
     };
 
-    // Sending the request
+    // 서버에 요청을 전송
     xhr.send();
   </script>
 
